--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "pg-promise": "^10.11.1"
   }
 }
