--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "http-errors": "^1.7.2",
     "morgan": "^1.10.0",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "pg-promise": "^10.11.1"
   }
