--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
-    "pg-promise": "^10.11.1"
+    "pg-promise": "^10.11.1",
+    "swagger-ui-express": "^4.3.0",
+    "yamljs": "^0.3.0"
   }
 }
