--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "npm": "7.18.1"
   },
   "scripts": {
-    "start": "nodemon -r dotenv/config index.js",
+    "start": "node index.js",
+    "dev": "nodemon -r dotenv/config index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
